# infera

./: MANIFEST.in  README.md  pyproject.toml  pyproject.yaml  setup.cfg  setup.py  tox.ini
inferas/: re.py
src/inferas/: __main__.py  web.py
src/inferas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: core_test.py
