[tool.poetry]
name = "my-python-package"
version = "0.1.0"
description = "A basic Python package"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferas"
version = "0.0.1"
description = "Runtime helper to keep an application's runtime consistent: install packages, run modules, and track version/build metadata."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://example.com"