[metadata]
name = inferas
version = 0.0.1
description = Runtime helper for installing packages, running modules and tracking build metadata.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/my-python-package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    inferas = inferas.core:main